// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container UI snapshots renders basic container 1`] = `
.emotion-0 {
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
}

<div
  className="emotion-0 emotion-1"
>
  Container Content
</div>
`;

exports[`Container UI snapshots renders clickable container 1`] = `
.emotion-0 {
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  cursor: pointer;
  -webkit-transition: box-shadow 200ms;
  transition: box-shadow 200ms;
}

.emotion-0:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

<div
  className="emotion-0 emotion-1"
  type="clickable"
>
  Container Content
</div>
`;

exports[`Container UI snapshots renders container helper components 1`] = `
.emotion-8 {
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
}

.emotion-0 {
  padding: 1.5rem;
}

@media (min-width:992px) {
  .emotion-0 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }
}

.emotion-2 {
  margin: 0 1.5rem;
  border-bottom: 1px solid #EDEDF0;
}

@media (min-width:992px) {
  .emotion-2 {
    margin: 0 2.5rem;
  }
}

.emotion-4 {
  width: 100%;
  overflow: hidden;
  object-fit: cover;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="emotion-0 emotion-1"
  >
    Section 1
  </div>
  <div
    className="emotion-2 emotion-3"
  />
  <img
    className="emotion-4 emotion-5"
    src="https://images-na.ssl-images-amazon.com/images/I/61E0pFPOl7L._SL1500_.jpg"
  />
  <div
    className="emotion-0 emotion-1"
  >
    <div>
      Section 2
    </div>
  </div>
</div>
`;

exports[`Container UI snapshots renders message type container 1`] = `
.emotion-0 {
  background-color: #FFFFFF;
  border: 1px solid #EDEDF0;
  border-radius: 16px;
  box-shadow: 0 12px 20px 0 rgba(51,46,84,0.05);
}

<div
  className="emotion-0 emotion-1"
  type="message"
>
  Container Content
</div>
`;
